SQOOP-2871: Sqoop2: Enrich FTP Connector resource file
(Jarek Jarcec Cecho via Abraham Fine)

--- a/connector/connector-ftp/src/main/resources/ftp-connector-config.properties
+++ b/connector/connector-ftp/src/main/resources/ftp-connector-config.properties
@@ -13,39 +13,31 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# FTP Connector Resources
+connector.name = FTP Connector
 
-############################
-
-# Link Config
-linkConfig.label = Link configuration
+linkConfig.label = FTP Server configuration
 linkConfig.help = Parameters required to connect to an FTP server.
 
-# FTP server hostname
-linkConfig.server.label = FTP server hostname
+linkConfig.server.label = Hostname
+linkConfig.server.example = ftp.apache.org
 linkConfig.server.help = Hostname for the FTP server.
 
-# FTP server port
-linkConfig.port.label = FTP server port (21)
-linkConfig.port.help = Port for the FTP server. 21 by default.
+linkConfig.port.label = Port
+linkConfig.port.example = 21
+linkConfig.port.help = Port for the FTP server. Connector will use 21 if omitted.
 
-# username string
 linkConfig.username.label = Username
-linkConfig.username.help = Enter the username to be used for connecting to the \
-                 FTP server.
+linkConfig.username.example = sqoop
+linkConfig.username.help = Username that will be used to authenticate connection to the FTP Server.
 
-# password string
 linkConfig.password.label = Password
-linkConfig.password.help = Enter the password to be used for connecting to the \
-                   FTP server.
+linkConfig.password.example = Sup3rS3cr3t!
+linkConfig.password.help = Password that will be used to authenticate connection to the FTP Server.
 
-# To Job Config
-#
-toJobConfig.label = To FTP configuration
+
+toJobConfig.label = Output configuration
 toJobConfig.help = Parameters required to store data on the FTP server.
 
 toJobConfig.outputDirectory.label = Output directory
+toJobConfig.outputDirectory.example = /user/sqoop/data
 toJobConfig.outputDirectory.help = Directory on the FTP server to write data to.
-
-toJobConfig.ignored.label = Ignored
-toJobConfig.ignored.help = This value is ignored.
