SQOOP-2872: Sqoop2: Enrich Kafka Connector resource file
(Jarek Jarcec Cecho via Abraham Fine)

--- a/connector/connector-kafka/src/main/resources/kafka-connector-config.properties
+++ b/connector/connector-kafka/src/main/resources/kafka-connector-config.properties
@@ -13,26 +13,25 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Generic Kafka Connector Resources
+connector.name = Kafka connector
 
-############################
+linkConfig.label = Kafka cluster
+linkConfig.help = Configuration options describing Kafka cluster.
 
-# Link Config
-linkConfig.label = Link configuration
-linkConfig.help = Here you supply information necessary to connect to Kafka
-
-linkConfig.brokerList.label = List of Kafka brokers
+linkConfig.brokerList.label = Kafka brokers
+linkConfig.brokerList.example = broker-1.kafka.org:9092,broker-2.kafka.org:9092
 linkConfig.brokerList.help = Comma-separated list of Kafka brokers in the form of host:port. \
                              It doesn't need to contain all brokers, but at least two are recommended for high availability
 
-linkConfig.zookeeperConnect.label = Zookeeper address
+linkConfig.zookeeperConnect.label = Zookeeper quorum
+linkConfig.zookeeperConnect.example = zk-1.kafka.org:2181,zk-2.kafka.org:2182
 linkConfig.zookeeperConnect.help = Address of Zookeeper used by the Kafka cluster. Usually host:port. \
                                    Multiple zookeeper nodes are supported. If Kafka is stored in its own znode \
                                    use host:port\kafka
-# To Job Config
-#
-toJobConfig.label = To Kafka configuration
-toJobConfig.help = Configuration necessary when writing data to Kafka
 
-toJobConfig.topic.label = Kafka topic
-toJobConfig.topic.help = Name of Kafka topic where we'll send the data
+toJobConfig.label = Output configuration
+toJobConfig.help = Configuration necessary when writing data to Kafka.
+
+toJobConfig.topic.label = Topic
+toJobConfig.topic.example = sqoop_topic
+toJobConfig.topic.help = Name of Kafka topic where data will be written into.
