SQOOP-2844: Sqoop2: TrustStore support for shell
(Abraham Fine via Jarek Jarcec Cecho)

--- a/shell/src/main/resources/shell-resource.properties
+++ b/shell/src/main/resources/shell-resource.properties
@@ -121,10 +121,15 @@ set.host_description = Host name to invoke server resources
 set.port_description = Port number to invoke server resources
 set.webapp_description = Web app to invoke server resources
 set.url_description = Url to invoke server resources
+set.tls_description = Flag that determines if https should be used instead of http
 set.server_usage = Usage: set server
 set.server_successful = Server is set successfully
 set.server_ignored = --host, --port or --webapp option is ignored, because --url option is given.
-
+set.truststore_successful = Truststore set successfully
+set.truststore_failed = Failed to set the truststore
+set.truststore_description = Path to the truststore
+set.truststore_password_description = Password for the truststore
+set.truststore_password_generator_description = Command that prints the password to the truststore
 
 # Show command
 show.description = Display various objects and configuration options
