SQOOP-2877: Sqoop2: Enrich Kite Connector resource file
(Jarek Jarcec Cecho via Abraham Fine)

--- a/connector/connector-kite/src/main/resources/kite-connector-config.properties
+++ b/connector/connector-kite/src/main/resources/kite-connector-config.properties
@@ -13,42 +13,35 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Kite Connector Resources
+connector.name = Kite connector
 
-############################
-# Link Config
-#
-linkConfig.label = Link Configuration
-linkConfig.help = You must supply the information requested in order to create a \
-  connection object.
+linkConfig.label = Global configuration
+linkConfig.help = Global configuration options that will be used for both from and to sides.
 
 linkConfig.authority.label = HDFS host and port
+linkConfig.authority.example = namenode.sqoop.org:8020
 linkConfig.authority.help = Optional to override HDFS file system location.
 
 linkConfig.confDir.label = Hadoop conf directory
+linkConfig.confDir.example = /etc/hadoop/conf/
 linkConfig.confDir.help = Directory with Hadoop configuration files. This directory will be added to the classpath.
 
-# To Job Config
-#
-toJobConfig.label = To Kite Dataset Configuration
-toJobConfig.help = You must supply the information requested in order to \
-  get information where you want to store your data.
+
+toJobConfig.label = Target configuration
+toJobConfig.help = Configuration options relevant to target dataset.
 
 toJobConfig.uri.label = Dataset URI
-toJobConfig.uri.help = Location to store dataset (i.e. \
-  "dataset:hdfs://<host>[:port]/<path>/<namespace>/<dataset>", \
-  "dataset:hive://<namespace>/<dataset>")
+toJobConfig.uri.example = dataset:hdfs://namespace/table
+toJobConfig.uri.help = Kite Dataset URI where should be data written to.
 
 toJobConfig.fileFormat.label = File format
-toJobConfig.fileFormat.help = Specify storage format to create a dataset and cannot be changed.
+toJobConfig.fileFormat.example = PARQUET
+toJobConfig.fileFormat.help = Storage format that should be used when creating new dataset.
 
-# From Job Config
-#
-fromJobConfig.label = From Kite Dataset Configuration
-fromJobConfig.help = You must supply the information requested in order to \
-  get information where you want to store your data.
+
+fromJobConfig.label = Source configuration
+fromJobConfig.help = Configuration options relevant to source dataset.
 
 fromJobConfig.uri.label = Dataset URI
-fromJobConfig.uri.help = Location to load dataset (i.e. \
-  "dataset:hdfs://<host>[:port]/<path>/<namespace>/<dataset>", \
-  "dataset:hive://<namespace>/<dataset>")
+fromJobConfig.uri.label = dataset:hdfs://namespace/table
+fromJobConfig.uri.help = Kite Dataset URI from which data will be read.
