SQOOP-2882: Sqoop2: Enrich SFTP Connector resource file
(Jarek Jarcec Cecho via Abraham Fine)

--- a/connector/connector-sftp/src/main/resources/sftp-connector-config.properties
+++ b/connector/connector-sftp/src/main/resources/sftp-connector-config.properties
@@ -13,39 +13,31 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# FTP Connector Resources
+connector.name = SFTP Connector
 
-############################
+linkConfig.label = FTP Server configuration
+linkConfig.help = Parameters required to connect to an SFTP server.
 
-# Link Config
-linkConfig.label = Link configuration
-linkConfig.help = Parameters required to connect to an FTP server.
+linkConfig.server.label = Hostname
+linkConfig.server.example = sftp.apache.org
+linkConfig.server.help = Hostname of the SFTP server.
 
-# FTP server hostname
-linkConfig.server.label = SFTP server hostname
-linkConfig.server.help = Hostname for the SFTP server.
+linkConfig.port.label = Port
+linkConfig.port.example = 22
+linkConfig.port.help = Port for the SFTP server. Connector will use 22 if omitted.
 
-# FTP server port
-linkConfig.port.label = SFTP server port (22)
-linkConfig.port.help = Port for the SFTP server. 22 by default.
-
-# username string
 linkConfig.username.label = Username
-linkConfig.username.help = Enter the username to be used for connecting to the \
-                 SFTP server.
+linkConfig.username.example = sqoop
+linkConfig.username.help = Username that will be used to authenticate connection to SFTP serer.
 
-# password string
 linkConfig.password.label = Password
-linkConfig.password.help = Enter the password to be used for connecting to the \
-                  SFTP server.
+linkConfig.password.example = Sup3rS3cr3t!
+linkConfig.password.help = Password that will be used to authenticate connection to the FTP Server.
 
-# To Job Config
-#
-toJobConfig.label = ToJob configuration
+
+toJobConfig.label = Output configuration
 toJobConfig.help = Parameters required to store data on the SFTP server.
 
 toJobConfig.outputDirectory.label = Output directory
+toJobConfig.outputDirectory.example = /user/sqoop/data
 toJobConfig.outputDirectory.help = Directory on the SFTP server to write data to.
-
-toJobConfig.ignored.label = Ignored
-toJobConfig.ignored.help = This value is ignored.
